src/snapshots/spyglys__parser__test__parsing_adding_strings.snap
---
source: src/parser.rs
expression: "parse_expression(&mut tokens, Token::Eof)"
---
Some(
    Plus(
        String(
            "pirmas",
        ),
        String(
            "antras",
        ),
    ),
)
