src/snapshots/spyglys__parser__test__parsing_builtin.snap
---
source: src/parser.rs
expression: parse_statement(&mut tokens)
---
Some(
    Def(
        "do_thing",
        Regex(
            "parse_(?<name>.)",
        ),
        Builtin(
            "if_else",
            [
                Variable(
                    "name",
                ),
                Plus(
                    Plus(
                        String(
                            "asdfkl",
                        ),
                        String(
                            "asdklfj",
                        ),
                    ),
                    String(
                        "aksldfasdfj",
                    ),
                ),
                String(
                    "yes",
                ),
            ],
        ),
    ),
)
