src/snapshots/spyglys__parser__test__parsing_builtin_in_func.snap
---
source: src/parser.rs
expression: parse_statement(&mut tokens)
---
Ok(
    Def(
        "do_thing",
        Regex(
            "parse_(?<name>.)",
        ),
        Builtin(
            "if_else",
            [
                Variable(
                    "name",
                ),
                Plus(
                    Plus(
                        String(
                            "asdfkl",
                        ),
                        String(
                            "asdklfj",
                        ),
                    ),
                    String(
                        "aksldfasdfj",
                    ),
                ),
                String(
                    "yes",
                ),
            ],
        ),
        [],
    ),
)
