src/snapshots/spyglys__parser__test__parsing_complex_call.snap
---
source: src/parser.rs
expression: "parse_expression(&mut tokens, Token::Eof)"
---
Some(
    Call(
        "run_thing?",
        Plus(
            Plus(
                Plus(
                    Plus(
                        Regex(
                            "v",
                        ),
                        Regex(
                            "$#@!@",
                        ),
                    ),
                    Regex(
                        "#$@$@#$@#$@#$",
                    ),
                ),
                Variable(
                    "other",
                ),
            ),
            Variable(
                "another",
            ),
        ),
    ),
)
