src/snapshots/spyglys__parser__test__parsing_iterator_empty.snap
---
source: src/parser.rs
expression: "parse_expression(&mut tokens, &[Token::Eof])"
---
Ok(
    Iterator(
        [],
    ),
)
