src/snapshots/spyglys__parser__test__parsing_iterator_no_trailing_comma.snap
---
source: src/parser.rs
expression: "parse_expression(&mut tokens, &[Token::Eof])"
---
Ok(
    Iterator(
        [
            String(
                "hi",
            ),
            Variable(
                "variable",
            ),
            Plus(
                String(
                    "hello ",
                ),
                String(
                    "there",
                ),
            ),
        ],
    ),
)
