src/snapshots/spyglys__parser__test__parsing_simple_call.snap
---
source: src/parser.rs
expression: "parse_expression(&mut tokens, Token::Eof)"
---
Ok(
    Call(
        "run_thing",
        Regex(
            "v",
        ),
    ),
)
