src/snapshots/spyglys__parser__test__parsing_simple_function_def.snap
---
source: src/parser.rs
expression: parse_statement(&mut tokens)
---
Some(
    Def(
        "do_thing",
        Regex(
            "hi (?<name>.*)",
        ),
        Plus(
            String(
                "hello ",
            ),
            Variable(
                "name",
            ),
        ),
    ),
)
