src/snapshots/spyglys__parser__test__parsing_unicode_ident.snap
---
source: src/parser.rs
expression: "parse_expression(&mut tokens, Token::Eof)"
---
Ok(
    Variable(
        "lietuviškasKintamasis",
    ),
)
